# Mastering-AB-Testing-A-Practical-Guide-for-Production

./: IDEAS.md  README.md  TODO.md  __init__.py  ab_test.pkl  basics.md  categories.py  db.py  event_sample.json  events.pkl  events.py  first_attempt.ipynb  generate_date.md  graph.py  helper.py  interleaving.md  intro.md  learning.md  metrics.py  monitoring.md  multivatiate.md  optimization.md  params.py  permutations.pkl  power_analysis.ipynb  presentation.md  program.md  pyproject.toml  refinements.md  reporting.py  server.py  setup.py  statistical_test.py  test_statistical_test.py
