[tool.poetry]
name = "ab_test_demo"
version = "0.1.0"
description = ""
authors = ["bertilhatt <bertil.hatt@ensae.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.4"
requests = "^2.28.1"
jupyter = "^1.0.0"
notebook = "^6.4.12"
duckdb = "^0.6.1"
fastparquet = "^2023.1.0"
4 = "^8.8.8"
fake-web-events = "^0.2.5"
statsmodels = "^0.13.5"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"
customtkinter = "^5.1.2"
pandera = "^0.14.5"
black = "^23.3.0"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 62
target-version = ['py310']
include = '\.pyi?$'
